--- a/finalmodeltraining.ipynb
+++ b/finalmodeltraining.ipynb
@@ -128,7 +128,6 @@
     "    # data[\"WillR\"]=ta.WILLR(data['High'], data['Low'], data['Close'], timeperiod=14)\n",
     "    \n",
     "    \n",
-    "    # data[\"Pattern\"]=ta.CDLCOUNTERATTACK(data['Open'],data['High'], data['Low'], data['Close'])\n",
     "\n",
     "\n",
     "\n",
@@ -149,6 +148,7 @@
     "    data=data.drop(li,axis=1)\n",
     "    \n",
     "    data=technicalIndicators(data)\n",
+    "    # data cleaning \n",
     "    data.dropna(how='any', inplace=True)\n",
     "    data = data[data.shape[0] % batch_size:]\n",
     "    validation_size1=round(data.shape[0]/6)\n",
@@ -222,11 +222,7 @@
     "np.random.seed(seed)\n",
     "tf.random.set_seed(seed)\n",
     "\n",
-    "file_exists = os.path.exists('readme.txt')\n",
-    "# if file_exists:\n",
-    "#     xtrain,ytrain,xval,yval,ttable,vtable,scaler=preprocess(df_train=df_train,df_validation=df_validation)\n",
-    "#     model = tf.keras.models.load_model(model_path)\n",
-    "# else:\n",
+    "\n",
     "xtrain,ytrain,xval,yval,xtest,ytest,ttable,valtble,testtble,scaler,dx,dv,dt,xtsl=preprocess(df_train=df_train,df_validation=df_val,df_test=df_test)\n",
     "\n",
     "maincolumn=xtrain.shape[2]\n"
@@ -484,7 +480,6 @@
     "def getmodel():        \n",
     "    model = Sequential()\n",
     "\n",
-    "    model = Sequential()\n",
     "    forward_layer = GRU(60, return_sequences=True,kernel_regularizer=tf.keras.regularizers.L1(0.02))\n",
     "    backward_layer = LSTM(34, return_sequences=True, go_backwards=True)\n",
     "    model.add(Bidirectional(forward_layer, backward_layer=backward_layer, input_shape=(window_size, maincolumn)))\n",
@@ -97189,141 +97184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_3\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " bidirectional_1 (Bidirectio  (None, 20, 94)           23820     \n",
-      " nal)                                                            \n",
-      "                                                                 \n",
-      " conv1d_34 (Conv1D)          (None, 19, 20)            3780      \n",
-      "                                                                 \n",
-      " dropout_37 (Dropout)        (None, 19, 20)            0         \n",
-      "                                                                 \n",
-      " lstm_3 (LSTM)               (None, 19, 16)            2368      \n",
-      "                                                                 \n",
-      " conv1d_35 (Conv1D)          (None, 18, 8)             264       \n",
-      "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 144)               0         \n",
-      "                                                                 \n",
-      " dense_10 (Dense)            (None, 4)                 580       \n",
-      "                                                                 \n",
-      " dense_11 (Dense)            (None, 4)                 20        \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 30,832\n",
-      "Trainable params: 30,832\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_3\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " bidirectional_1 (Bidirectio  (None, 20, 94)           23820     \n",
-      " nal)                                                            \n",
-      "                                                                 \n",
-      " conv1d_34 (Conv1D)          (None, 19, 20)            3780      \n",
-      "                                                                 \n",
-      " dropout_37 (Dropout)        (None, 19, 20)            0         \n",
-      "                                                                 \n",
-      " lstm_3 (LSTM)               (None, 19, 16)            2368      \n",
-      "                                                                 \n",
-      " conv1d_35 (Conv1D)          (None, 18, 8)             264       \n",
-      "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 144)               0         \n",
-      "                                                                 \n",
-      " dense_10 (Dense)            (None, 4)                 580       \n",
-      "                                                                 \n",
-      " dense_11 (Dense)            (None, 4)                 20        \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 30,832\n",
-      "Trainable params: 30,832\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model1.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def getinversescalerfuture(true,pred,dates):\n",
-    "#     dt=np.asarray(dates)\n",
-    "#     d1=[i[0][0] for i in dt]\n",
-    "#     d2=[i[0][1] for i in dt]\n",
-    "#     ytt1=[]\n",
-    "#     ypt1=[]\n",
-    "#     ytt2=[]\n",
-    "#     ypt2=[]\n",
-    "   \n",
-    "#     for i in true:\n",
-    "#         ytt1.append(i[0])\n",
-    "#         ytt2.append(i[1])\n",
-    "        \n",
-    "#     for i in pred:\n",
-    "#         ypt1.append(i[0])\n",
-    "#         ypt2.append(i[1])\n",
-    "#     t1=np.repeat(ytt1,maincolumn,axis=1)\n",
-    "#     t1=t1[:,:maincolumn]\n",
-    "#     t1=scaler.inverse_transform(t1)[:,:]\n",
-    "#     t2=np.repeat(ytt2,maincolumn,axis=1)\n",
-    "#     t2=t2[:,:maincolumn]\n",
-    "#     t2=scaler.inverse_transform(t2)[:,:]\n",
-    "#     p1=np.repeat(ypt1,maincolumn,axis=1)\n",
-    "#     p1=p1[:,:maincolumn]\n",
-    "#     p1=scaler.inverse_transform(p1)[:,:]\n",
-    "#     p2=np.repeat(ypt2,maincolumn,axis=1)\n",
-    "#     p2=p2[:,:maincolumn]\n",
-    "#     p2=scaler.inverse_transform(p2)[:,:]\n",
-    "\n",
-    "#     return t1,p1,d1,t2,p2,d2\n",
-    "\n",
-    "\n",
-    "# lastx=np.asarray(xtsl)\n",
-    "# lastx=np.reshape(lastx, (lastx.shape[0], 1))\n",
-    "# lastx=np.repeat(lastx,maincolumn,axis=1)\n",
-    "# lastx=lastx[:,:24]\n",
-    "# lastx=scaler.inverse_transform(lastx)[:,0]\n",
-    "# t1,p1,d1,t2,p2,d2=getinversescalerfuture(y_true,y_pred,dt)  \n",
-    "# \n",
-    "# temp_df={\"y_pred1\":p2[:,3],\"y_pred\":p1[:,3],\"y_true\":t1[:,3],\"y_true1\":t2[:,3],\"dates\":d1,\"dates1\":d2,\"lastx\":lastx}\n",
-    "# temp_df=pd.DataFrame.from_dict(temp_df)\n",
-    "# temp_df=temp_df.set_index(\"dates\")\n",
-    "# temp_df "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
    "outputs": [],
@@ -98505,7 +98365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8rc1"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4
  },
